# deeplearning

deep-learning-app/: CMakeLists.txt  README.md  blueprint.md
deep-learning-app/include/: activations.h  backend.h  layer.h  loss.h  model.h  neuron.h  tensor.h  utils.h
deep-learning-app/src/: main.cpp
deep-learning-app/src/core/: loss.cpp  neuron.cpp  neuron.h  tensor.cpp  tensor.h
deep-learning-app/src/layers/: layer.cpp  layer.h
deep-learning-app/src/models/: model.cpp
deep-learning-app/src/utils/: utils.h
deep-learning-app/tests/: test_main.cpp
